lang-version/backend/k8s/airw-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: airw-backend-pod
  namespace: airw
  labels:
    app: airw-backend

spec:
  containers:
    - name: airw-backend-container
      image: waleedimran/airw-backend:latest

      ports:
        - containerPort: 8000
