lang-version/backend/k8s/airw-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: airw-backend-service
  namespace: airw

spec:
  selector:
    app: airw-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
