lang-version/backend/k8s/airw-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: airw-backend-ingress
  namespace: airw

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: airw-backend-service
                port:
                  number: 8000
